<html>
  <head>
    <style type='text/css'>
      a            { color:#a0a0e0 }
      div.title    { 
          color:#C0F0C0; 
          font-size:1.2em; 
          font-weight:bold; 
          margin-top:1em; 
          margin-bottom:0.5em; 
          text-align:center }
      div.subtitle { 
          color:#C0F0C0; 
          font-size:0.8em; 
          margin-bottom:1em; 
          text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
$ 1.4.2
  % Version 1.4.2
  _ 2013-08-05
    * Show changelog dialog (this message!)
    * Uses a newer version of mupdf: still has memory problems, but errors do not close the app
    * Catalan translation
    * Settings menu
    * Use more area of the screen 
$ END_OF_CHANGE_LOG
  </body>
</html>