@@ -9,23 +9,32 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 <!--         android:debuggable="true" -->
     <supports-screens android:smallScreens="false"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
 
         android:hardwareAccelerated="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:allowBackup="true" >
+        <!--  The viewer activity -->
         <activity
             android:name=".ComicViewerActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
+            <!--  Register as a viewer of these files -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-                <action android:name="android.intent.action.EDIT" />
                 <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="file" />
 			    <data android:mimeType="*/*" />
 			    <data android:pathPattern=".*\\.cbz" />
+			    <data android:pathPattern=".*\\.CBZ" />
+			    <data android:pathPattern=".*\\.cbr" />
+			    <data android:pathPattern=".*\\.CBR" />
+			    <data android:pathPattern=".*\\.pdf" />
+			    <data android:pathPattern=".*\\.PDF" />
 			    <data android:host="*" />      
             </intent-filter>
         </activity>
@@ -41,14 +50,18 @@
             android:name=".SettingsActivity"
             android:label="@string/settings" >
         </activity>
+        <!--  The main activity -->
         <activity
-            android:name=".GalleryExplorer"
+            android:name=".GalleryExplorerActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- AdMob -->
+        <activity android:name="com.google.ads.AdActivity"
+           android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
     </application>
 
 </manifest>
